--- a/First/hw1/src/app/tasks/task-list/task-list.component.html
+++ b/First/hw1/src/app/tasks/task-list/task-list.component.html
@@ -1,3 +1,5 @@
+<app-create-user (createEvent)="createTask($event)"></app-create-user>
+
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">ToDoList</a>
